vlib/v/checker/tests/deference_nil_ptr_err.vv
foo_ptr := unsafe { nil }

println(*foo_ptr)
